@@ -1,6 +1,7 @@
 6.14.5.1
     rtstats(1):
         * Commented code about who logs
+        * Removed trailing newline in rtstats(1) log message
 
     Documentation:
         * Added requirement that "RemoveIPC" in "/etc/systemd/logind.conf" must be "no" to
